--- a/src/main/resources/templates/fragrams/footer.html
+++ b/src/main/resources/templates/fragrams/footer.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<footer th:fragment="footer" class="py-5 bg-dark">
+<footer th:fragment="footer">
     <div class="container px-5"><p class="m-0 text-center text-white">Copyright &copy; Product Management System 2022</p></div>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
