--- a/src/main/resources/templates/fragrams/header.html
+++ b/src/main/resources/templates/fragrams/header.html
@@ -13,14 +13,14 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Product Management System</title>
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="/css/styles.css" rel="stylesheet" />
+    <link href="/static/css/styles.css" rel="stylesheet" />
+    <link href="/static/css/register.css" rel="stylesheet" />
     <!--https://icons.getbootstrap.com/#usage-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    <script src="https://kit.fontawesome.com/2bbac3a66c.js" crossorigin="anonymous" ></script>
 </head>
 
 </body>
