--- a/src/main/resources/templates/fragrams/nav.html
+++ b/src/main/resources/templates/fragrams/nav.html
@@ -5,34 +5,29 @@
     <title>Title</title>
 </head>
 <body>
-<nav th:fragment="nav" class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container px-5">
-        <a class="navbar-brand" href="#!">Start Bootstrap</a>
+    <nav th:fragment="nav" class="menu">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <div sec:authorize="isAuthenticated()" class="text-warning">
-
-
-<!--                            Hello, <span th:text="${session.currentUser.name}"></span>-->
-
-
-
-                         Email: <span sec:authentication="name"></span>   Authorities: <span sec:authentication="principal.authorities"></span>
-                </div>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" th:href="@{/index}">Home</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/about}">About</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/contact}">Contact</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/students}">Member List</a></li>
-                <span sec:authorize="hasRole('ROLE_ADMIN')"><li class="nav-item"><a class="nav-link" th:href="@{/students/studentform}">Student Form</a></li></span>
-                <li class="nav-item"><a class="nav-link" th:href="@{/courses}">Courses List</a></li>
-                <span sec:authorize="hasRole('ROLE_ADMIN')"> <li class="nav-item"><a class="nav-link" th:href="@{/courses/courseform}">Course Form</a></li> </span>
-                <li class="nav-item"><a class="nav-link" th:href="@{/uploadfileform}">Upload Form</a></li>
-
-
-            </ul>
-        </div>
-    </div>
-</nav>
+        <ol>
+          <li class="menu-item"><a href="#0">Home</a></li>
+          <li class="menu-item"><a href="#0">About</a></li>
+          <li class="menu-item">
+            <a href="#0">Widgets</a>
+            <ol class="sub-menu">
+              <li class="menu-item"><a href="#0">Big Widgets</a></li>
+              <li class="menu-item"><a href="#0">Bigger Widgets</a></li>
+              <li class="menu-item"><a href="#0">Huge Widgets</a></li>
+            </ol>
+          </li>
+          <li class="menu-item">
+            <a href="#0">Kabobs</a>
+            <ol class="sub-menu">
+              <li class="menu-item"><a href="#0">Shishkabobs</a></li>
+              <li class="menu-item"><a href="#0">BBQ kabobs</a></li>
+              <li class="menu-item"><a href="#0">Summer kabobs</a></li>
+            </ol>
+          </li>
+          <li class="menu-item"><a href="#0">Contact</a></li>
+        </ol>
+    </nav>
 </body>
 </html>
