--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,10 +13,9 @@
     <!-- ===== CSS ===== -->
     <link rel="stylesheet" href="/static/css/style.css">
          
-    <!--<title>Login & Registration Form</title>-->
+    <title>Login & Registration Form</title>
 </head>
 <body class="body-login">
-
     <div class="container">
         <div class="forms">
             <div class="form login">
