--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css" type="text/css">
     <!-- Boxicons CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -59,7 +59,7 @@
     </li>
 
     <li>
-      <a href="/templates/contact.html">
+      <a href="/productmanagementproject/templates/contact.html">
         <i class='bx bx-message' ></i>
         <span class="links_name">Contact Us</span>
       </a>
@@ -71,7 +71,7 @@
       </a>
     </li>
     <li class="log_out">
-      <a href="/templates/login.html">
+      <a href="/productmanagementproject/templates/login.html">
         <i class='bx bx-log-out'></i>
         <span class="links_name">Log out</span>
       </a>
