--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -96,7 +95,7 @@
         </div>
     </div>
 
-    <script src="/static/js/signup.js"></script>
+    <script src="/js/signup.js"></script>
 
 </body>
 </html>
