--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -28,8 +28,8 @@
             <div class="email details">
                 <i class="fas fa-envelope"></i>
                 <div class="topic">Email</div>
-                <div class="text-one">codinglab@gmail.com</div>
-                <div class="text-two">info.codinglab@gmail.com</div>
+                <div class="text-one">jv_mangement@gmail.com</div>
+                <div class="text-two">info.management@gmail.com</div>
             </div>
         </div>
         <div class="right-side">
