--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -16,19 +16,19 @@
   </div>
   <ul class="nav-links">
     <li>
-      <a href="/templates/dashboard.html" class="active">
+      <a href="/productmanagementproject/templates/dashboard.html" class="active">
         <i class='bx bx-grid-alt' ></i>
         <span class="links_name">Dashboard</span>
       </a>
     </li>
     <li>
-      <a href="#">
+      <a href="/productmanagementproject/templates/products.html">
         <i class='bx bx-box' ></i>
         <span class="links_name">Product</span>
       </a>
     </li>
     <li>
-      <a href="#">
+      <a href="/productmanagementproject/templates/create_product.html">
         <i class='bx bx-list-ul' ></i>
         <span class="links_name">Adding product</span>
       </a>
@@ -71,7 +71,7 @@
       </a>
     </li>
     <li class="log_out">
-      <a href="/productmanagementproject/templates/login.html">
+      <a href="/templates/login.html">
         <i class='bx bx-log-out'></i>
         <span class="links_name">Log out</span>
       </a>
