--- a/src/main/resources/templates/fragrams/header.html
+++ b/src/main/resources/templates/fragrams/header.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <header th:fragment="header">
+    <header th:class="header" th:fragment="header">
         <div class="sidebar">
             <div class="logo-details">
                 <i class='bx bxs-like bx-spin'></i>
@@ -17,33 +17,33 @@
             </div>
             <ul class="nav-links">
                 <li>
-                    <a href="/templates/dashboard.html" class="active">
+                    <a th:href="@{/dashboard}" th:class="active">
                         <i class='bx bx-grid-alt' ></i>
                         <span class="links_name">Dashboard</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a th:href="@{/products}">
                         <i class='bx bx-box' ></i>
                         <span class="links_name">Product</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a th:href="@{/create_product}">
                         <i class='bx bx-list-ul' ></i>
-                        <span class="links_name">Adding product</span>
+                        <span class="links_name">New Product</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a th:href="@{/users}">
                         <i class='bx bx-user' ></i>
                         <span class="links_name">Team</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a th:href="@{/create_user}">
                         <i class='bx bx-pie-chart-alt-2' ></i>
-                        <span class="links_name">Adding user</span>
+                        <span class="links_name">New Member</span>
                     </a>
                 </li>
                 <li>
@@ -60,9 +60,9 @@
                 </li>
 
                 <li>
-                    <a href="#">
+                    <a th:href="@{/contact}">
                         <i class='bx bx-message' ></i>
-                        <span class="links_name">Messages</span>
+                        <span class="links_name">Contact Us</span>
                     </a>
                 </li>
                 <li>
@@ -72,7 +72,7 @@
                     </a>
                 </li>
                 <li class="log_out">
-                    <a href="/templates/login.html">
+                    <a th:href="@{/logout}">
                         <i class='bx bx-log-out'></i>
                         <span class="links_name">Log out</span>
                     </a>
