--- a/src/main/resources/static/css/contact.css
+++ b/src/main/resources/static/css/contact.css
@@ -8,10 +8,8 @@
 body{
     min-height: 100vh;
     width: 100%;
-    background: #c8e8e9;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    background: #247275;
+    
 }
 .container{
     width: 85%;
