--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -6,10 +6,36 @@
     <!-- <title> Responsive Contact Us Form  | CodingLab </title>-->
     <link rel="stylesheet" href="/static/css/contact.css" type="text/css">
     <!-- Fontawesome CDN Link -->
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <!-- Brand -->
+    <a class="navbar-brand" href="/productmanagementproject/templates/dashboard.html">Product Management System</a>
+
+    <!-- Toggler/collapsibe Button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Navbar links -->
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/productmanagementproject/templates/products.html">Product Management</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/productmanagementproject/templates/users.html">Member Management</a>
+            </li>
+
+        </ul>
+    </div>
+</nav>
 <div class="container">
     <div class="content">
         <div class="left-side">
