--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -34,27 +34,15 @@
       </a>
     </li>
     <li>
-      <a href="#">
+      <a href="/productmanagementproject/templates/users.html">
         <i class='bx bx-user' ></i>
         <span class="links_name">Team</span>
       </a>
     </li>
     <li>
-      <a href="#">
+      <a href="/productmanagementproject/templates/create_user.html">
         <i class='bx bx-pie-chart-alt-2' ></i>
-        <span class="links_name">Adding user</span>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <i class='bx bx-coin-stack' ></i>
-        <span class="links_name">Stock</span>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <i class='bx bx-book-alt' ></i>
-        <span class="links_name">Total order</span>
+        <span class="links_name">Adding Member</span>
       </a>
     </li>
 
@@ -64,14 +52,8 @@
         <span class="links_name">Contact Us</span>
       </a>
     </li>
-    <li>
-      <a href="#">
-        <i class='bx bx-cog' ></i>
-        <span class="links_name">Setting</span>
-      </a>
-    </li>
     <li class="log_out">
-      <a href="/templates/login.html">
+      <a href="/productmanagementproject/templates/login.html">
         <i class='bx bx-log-out'></i>
         <span class="links_name">Log out</span>
       </a>
