--- a/src/main/resources/templates/edit_user.html
+++ b/src/main/resources/templates/edit_user.html
@@ -25,7 +25,7 @@
 			  <a class="nav-link" href="/productmanagementproject/templates/products.html">Product Management</a>
 		  </li>
 		  <li class="nav-item">
-			  <a class="nav-link" href="/productmanagementproject/templates/users.html">Member Management</a>
+			  <a class="nav-link" href=/productmanagementproject/templates/users.html">Member Management</a>
 		  </li>
 
 	  </ul>
@@ -36,39 +36,39 @@
 	<div class = "container">
 		<div class = "row">
 			<div class ="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-				<h1 class = "text-center"> Update Product </h1>
+				<h1 class = "text-center"> Update Member </h1>
 				<div class = "card-body">
-					<form th:action="@{/products/{id} (id=${product.productId})}" th:object = "${product}" method="POST">
+					<form th:action="@{/users/edit/{email} (email=${user.email})}" th:object = "${user}" method="POST">
 						<div class ="form-group">
-							<label> Product Name </label>
+							<label> Member  Name </label>
 							<input
 									type = "text"
-									name = "productName"
-									th:field = "*{productName}"
+									name = "name"
+									th:field = "*{name}"
 									class = "form-control"
-									placeholder="Enter Product Name"
+									placeholder="Enter Member Name"
 							/>
 						</div>
 
 						<div class ="form-group">
-							<label> Product Category </label>
+							<label> Member Email </label>
 							<input
-									type = "text"
-									name = "category"
-									th:field = "*{category}"
-									class = "form-control"
-									placeholder="Enter Product Category"
-							/>
-						</div>
-
-						<div class ="form-group">
-							<label> Product Price</label>
-							<input
-									type = "number"
-									name = "productPrice"
+									type = "email"
+									name = "email"
 									th:field = "*{email}"
 									class = "form-control"
-									placeholder="Enter Product Price"
+									placeholder="Enter Member Email"
+							/>
+						</div>
+
+						<div class ="form-group">
+							<label> Password</label>
+							<input
+									type = "password"
+									name = "password"
+									th:field = "*{password}"
+									class = "form-control"
+									placeholder="Enter Password"
 							/>
 						</div>
 
