--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -95,7 +95,7 @@
         </div>
     </div>
 
-    <script src="/js/signup.js"></script>
+    <script src="/static/js/signup.js"></script>
 
 </body>
 </html>
